[package]
name = "orgize-demos"
version = "0.1.0"
authors = ["PoiScript <poiscript@gmail.com>"]
edition = "2018"
publish = false

[profile.release]
lto = true

[dependencies]
actix-web = { version = "3.1.0", default-features = false }
orgize = { git = "https://github.com/PoiScript/orgize", features = ["syntect"] }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
